Add Storage for RSVP